--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,6 @@ dependencies:
     - Pystan==2.19.1.1
     - streamlit==1.11.0
     - mplfinance==0.12.9b1
-    - yfinance==0.1.74
-    - tweepy==4.10.0
-    - yahoo_fin==0.8.91
+    - yfinance
+    - tweepy
+    - yahoo_fin
