--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - fbprophet==0.7.1
   - requests==2.28.1
   - Pillow==9.2.0
+  - pip==22.1.2
   - pip:
     - Pystan==2.19.1.1
     - streamlit==1.11.0
